config/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: depot
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/download"
                route:
                  cluster: upstream-service
              - match:
                  prefix: "/metadata"
                route:
                  cluster: upstream-service
              - match:
                  prefix: "/upload"
                route:
                  cluster: upstream-service
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              http_service:
                server_uri:
                  uri: http://localhost:5001
                  cluster: ext_authz-service
                  timeout: 0.25s
                authorization_request:
                  headers_to_add:
                  - key: "X-Auth-Check"
                    value: "YES"
                authorization_response:
                  allowed_upstream_headers:
                    patterns:
                    - exact: authorization
              transport_api_version: V3
              failure_mode_allow: false
              clear_route_cache: true
              status_on_error:
                code: 502
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: upstream-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 5002
  - name: ext_authz-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ext_authz-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 5001
